# autoweb-module

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg  test.ipynb
autoweb_module/: __init__.py  exceptions.py
autoweb_module/selenium/: cond.py  const.py  element.py  options.py  selenium.py
